Implement PS-2477 (Basic test cases should be created for PAM plugin)
Although PAM authentication is impossible to test in MTR without
system cooperation, it is possible to do minimal plugin testing
without testing authentication itself: that INSTALL/UNINSTALL PLUGIN
works and that it is possible to CREATE USER with this authentication
method. Add such tests to the plugin-specific test directory, add this
suite to the default suite list, and install the test files.

--- a/plugin/percona-pam-for-mysql/CMakeLists.txt
+++ b/plugin/percona-pam-for-mysql/CMakeLists.txt
@@ -32,5 +32,12 @@ IF(HAVE_PAM AND HAVE_GETPWNAM_R AND HAVE_GETGRGID_R)
   MYSQL_ADD_PLUGIN(auth_pam ${AUTH_PAM_SOURCES} LINK_LIBRARIES pam MODULE_ONLY)
   MYSQL_ADD_PLUGIN(auth_pam_compat ${AUTH_PAM_COMPAT_SOURCES} LINK_LIBRARIES pam MODULE_ONLY)
   MYSQL_ADD_PLUGIN(dialog src/dialog.c LINK_LIBRARIES perconaserverclient MODULE_ONLY)
+
+  IF(UNIX)
+    IF(INSTALL_MYSQLTESTDIR)
+      INSTALL(DIRECTORY tests/mtr/ DESTINATION ${INSTALL_MYSQLTESTDIR}/suite/percona-pam-for-mysql COMPONENT Test)
+    ENDIF()
+  ENDIF()
+
 ENDIF(HAVE_PAM AND HAVE_GETPWNAM_R AND HAVE_GETGRGID_R)
 ENDIF(WITH_PAM)
