Get psdom from github

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -6,6 +6,8 @@ SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
 BUILDDIR      = build
+UTILS_REPO    = https://github.com/Percona-Lab/percona-doc-utils
+UTILS_DIR     = percona-doc-utils
 
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
@@ -37,7 +39,11 @@ help:
 clean:
 	-rm -rf $(BUILDDIR)/*
 
-html:
+ext:
+	@echo "Cloning repository..."
+	@git clone $(UTILS_REPO) $(BUILDDIR)/$(UTILS_DIR) && cp -r $(BUILDDIR)/$(UTILS_DIR)/sphinx/ext source
+
+html: ext
 	@echo "Downloading percona-theme ..."
 	@wget -O percona-theme.tar.gz https://www.percona.com/docs/theme-1-4/percona-server/5.6
 	@echo "Extracting theme."
