wget not git clone

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -6,8 +6,8 @@ SPHINXOPTS    =
 SPHINXBUILD   = sphinx-build
 PAPER         =
 BUILDDIR      = build
-UTILS_REPO    = https://github.com/Percona-Lab/percona-doc-utils
-UTILS_DIR     = percona-doc-utils
+UTILS_REPO    = https://github.com/Percona-Lab/percona-doc-utils/archive/master.tar.gz
+UTILS_DIR     = percona-doc-utils-master
 
 # Internal variables.
 PAPEROPT_a4     = -D latex_paper_size=a4
@@ -40,8 +40,9 @@ clean:
 	-rm -rf $(BUILDDIR)/*
 
 ext:
-	@echo "Cloning repository..."
-	@git clone $(UTILS_REPO) $(BUILDDIR)/$(UTILS_DIR) && cp -r $(BUILDDIR)/$(UTILS_DIR)/sphinx/ext source
+	@echo "Downloading Percona documentation utils from repository..."
+	@wget -O - $(UTILS_REPO) | tar xz -C $(BUILDDIR) && cp -r $(BUILDDIR)/$(UTILS_DIR)/sphinx/ext source
+
 
 html: ext
 	@echo "Downloading percona-theme ..."
@@ -118,7 +119,7 @@ latex:
 	@echo "Run \`make' in that directory to run these through (pdf)latex" \
 	      "(use \`make latexpdf' here to do that automatically)."
 
-latexpdf:
+latexpdf: ext
 	$(SPHINXBUILD) -b latex $(ALLSPHINXOPTS) $(BUILDDIR)/latex
 	@echo "Running LaTeX files through pdflatex..."
 	make -C $(BUILDDIR)/latex all-pdf
