--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/percona/Percona-TokuBackup.git
 [submodule "storage/rocksdb/rocksdb"]
 	path = storage/rocksdb/rocksdb
-	url = https://github.com/percona/rocksdb.git
+	url = https://github.com/facebook/rocksdb.git
 [submodule "storage/rocksdb/third_party/zstd"]
 	path = storage/rocksdb/third_party/zstd
 	url = https://github.com/facebook/zstd
