--- a/mysql-test/std_data/keyring_vault_confs/keyring_vault_ut.conf
+++ b/mysql-test/std_data/keyring_vault_confs/keyring_vault_ut.conf
@@ -1,4 +1,4 @@
-vault_url = https://vault.percona.com:8200
+vault_url = http://127.0.0.1:8200
 secret_mount_point = /cicd/ut_tests
 token = MTR_VAULT_UT_TOKEN_TAG
-vault_ca = MYSQL_TEST_DIR/std_data/keyring_vault_confs/vault_ca.crt
+secret_mount_point_version = AUTO
