--- a/build-ps/ubuntu/control
+++ b/build-ps/ubuntu/control
@@ -174,10 +174,10 @@ Description: Percona Server database client binaries
 
 Package: percona-server-server-5.7
 Architecture: any
-Pre-Depends: percona-server-common-5.7 (= ${binary:Version}),
-             adduser,
+Pre-Depends: adduser,
              debconf (>= 0.2.17)
-Depends: percona-server-client-5.7 (= ${binary:Version}),
+Depends: percona-server-common-5.7 (= ${binary:Version}),
+	 percona-server-client-5.7 (= ${binary:Version}),
          ${shlibs:Depends}, ${misc:Depends},
          psmisc,
          openssl
