--- a/build-ps/debian/extra/apparmor.d/usr.sbin.mysqld.in
+++ b/build-ps/debian/extra/apparmor.d/usr.sbin.mysqld.in
@@ -1,60 +1,79 @@
-# Last Modified: Thu Mar  7 21:58:51 2013
-# Based on usr.sbin.mysqld packaged in mysql-server in Ubuntu.
-# For Percona Server and Percona XtraDB Cluster
-
 #include <tunables/global>
 
 /usr/sbin/mysqld flags=(complain) {
   #include <abstractions/base>
-  #include <abstractions/mysql>
   #include <abstractions/nameservice>
   #include <abstractions/user-tmp>
+  #include <abstractions/mysql>
   #include <abstractions/winbind>
-  #include <local/usr.sbin.mysqld>
 
-
-  capability chown,
-  capability dac_override,
-  capability setgid,
-  capability setuid,
-  capability sys_rawio,
+# Allow system resource access
+  /sys/devices/system/cpu/ r,
+  /sys/devices/system/node/ r,
+  /sys/devices/system/node/** r,
+  /proc/*/status r,
   capability sys_resource,
+  capability dac_override,
+  capability setuid,
+  capability setgid,
+  capability sys_nice,
 
+# Allow network access
   network tcp,
 
-
-  /dev/dm-0 r,
-  /etc/group r,
-  /etc/gai.conf r,
   /etc/hosts.allow r,
   /etc/hosts.deny r,
-  /etc/ld.so.cache r,
-  /etc/mtab r,
-  /etc/my.cnf r,
-  /etc/mysql/*.cnf r,
-  /etc/mysql/*.pem r,
-  /etc/mysql/conf.d/ r,
-  /etc/mysql/conf.d/* r,
-  /etc/nsswitch.conf r,
-  /etc/passwd r,
-  /etc/services r,
-  /run/mysqld/mysqld.pid w,
-  /run/mysqld/mysqld.sock w,
-  /sys/devices/system/cpu/ r,
-  owner /tmp/** lk,
-  /tmp/** rw,
+
+# Allow config access
+  /etc/mysql/** r,
+
+# Allow pid, socket, socket lock file access
+  /var/run/mysqld/mysqld.pid rw,
+  /var/run/mysqld/mysqld.sock rw,
+  /var/run/mysqld/mysqld.sock.lock rw,
+  /var/run/mysqld/mysqlx.sock rw,
+  /var/run/mysqld/mysqlx.sock.lock rw,
+  /run/mysqld/mysqld.pid rw,
+  /run/mysqld/mysqld.sock rw,
+  /run/mysqld/mysqld.sock.lock rw,
+  /run/mysqld/mysqlx.sock rw,
+  /run/mysqld/mysqlx.sock.lock rw,
+
+# Allow systemd notify messages
+  /{,var/}run/systemd/notify w,
+
+# Allow execution of server binary
+  /usr/sbin/mysqld mr,
+  /usr/sbin/mysqld-debug mr,
+
+# Allow plugin access
   /usr/lib/mysql/plugin/ r,
   /usr/lib/mysql/plugin/*.so* mr,
-  /usr/sbin/mysqld mr,
+
+# Allow error msg and charset access
+  /usr/share/mysql/ r,
   /usr/share/mysql/** r,
+  /usr/share/mysql-@MYSQL_BASE_VERSION@/ r,
+  /usr/share/mysql-@MYSQL_BASE_VERSION@/** r,
+
+# Allow data dir access
   /var/lib/mysql/ r,
   /var/lib/mysql/** rwk,
-  /var/log/mysql.err rw,
-  /var/log/mysql.log rw,
+
+# Allow data files dir access
+  /var/lib/mysql-files/ r,
+  /var/lib/mysql-files/** rwk,
+
+# Allow keyring dir access
+  /var/lib/mysql-keyring/ r,
+  /var/lib/mysql-keyring/** rwk,
+
+# Allow log file access
   /var/log/mysql/ r,
-  /var/log/mysql/* rw,
-  /var/run/mysqld/mysqld.pid w,
-  /var/run/mysqld/mysqld.sock w,
+  /var/log/mysql/** rw,
+
+# Allow access to openssl config
+  /etc/ssl/openssl.cnf r,
 
   # Site-specific additions and overrides. See local/README for details.
   #include <local/usr.sbin.mysqld>
