PS-7566: Review fixes

--- a/build-ps/Jenkinsfile
+++ b/build-ps/Jenkinsfile
@@ -111,7 +111,7 @@ pipeline {
                 cd \${build_dir}
                 sudo bash -x ./percona-server_builder.sh --builddir=\${build_dir}/test --install_deps=1; \
                 curl https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip -o awscliv2.zip
-                bash -x ./percona-server_builder.sh --builddir=\${build_dir}/test --repo=${GIT_REPO} --branch=${BRANCH} --rpm_release=${RPM_RELEASE} --deb_release=${DEB_RELEASE} --build_src_rpm=1 --gen_changelog=${RELEASE_BUILD}
+                bash -x ./percona-server_builder.sh --builddir=\${build_dir}/test --repo=${GIT_REPO} --branch=${BRANCH} --rpm_release=${RPM_RELEASE} --deb_release=${DEB_RELEASE} --build_src_rpm=1
             """
             withCredentials([[$class: 'AmazonWebServicesCredentialsBinding', accessKeyVariable: 'AWS_ACCESS_KEY_ID', credentialsId: 'AWS_STASH', secretKeyVariable: 'AWS_SECRET_ACCESS_KEY']]) {
               sh """
