--- a/build-ps/debian/rules
+++ b/build-ps/debian/rules
@@ -82,6 +82,8 @@ ifeq ($(SKIP_DEBUG_BINARY),)
 		-DWITH_FEDERATED_STORAGE_ENGINE=ON \
 		-DWITH_PAM=ON \
 		-DWITH_ROCKSDB=ON \
+		-DROCKSDB_DISABLE_AVX2=1 \
+		-DROCKSDB_DISABLE_MARCH_NATIVE=1 \
 		-DDOWNLOAD_BOOST=1 \
 		-DWITH_BOOST=libboost \
 		-DWITH_EXTRA_CHARSETS=all $(TOKUDB_OPTS_DEBUG) ..
@@ -120,6 +122,8 @@ endif
 		-DWITH_FEDERATED_STORAGE_ENGINE=ON \
 		-DWITH_PAM=ON \
 		-DWITH_ROCKSDB=ON \
+		-DROCKSDB_DISABLE_AVX2=1 \
+		-DROCKSDB_DISABLE_MARCH_NATIVE=1 \
 		-DDOWNLOAD_BOOST=1 \
 		-DWITH_BOOST=libboost \
 		-DWITH_EXTRA_CHARSETS=all $(TOKUDB_OPTS_RELEASE) ..
