--- a/build-ps/ubuntu/rules
+++ b/build-ps/ubuntu/rules
@@ -81,6 +81,8 @@ ifeq ($(SKIP_DEBUG_BINARY),)
 		-DWITH_FEDERATED_STORAGE_ENGINE=ON \
 		-DWITH_PAM=ON \
 		-DWITH_ROCKSDB=ON \
+		-DROCKSDB_DISABLE_AVX2=1 \
+		-DROCKSDB_DISABLE_MARCH_NATIVE=1 \
 		-DWITH_SCALABILITY_METRICS=ON \
 		-DDOWNLOAD_BOOST=1 \
 		-DWITH_BOOST=libboost \
@@ -119,6 +121,8 @@ endif
 		-DWITH_FEDERATED_STORAGE_ENGINE=ON \
 		-DWITH_PAM=ON \
 		-DWITH_ROCKSDB=ON \
+		-DROCKSDB_DISABLE_AVX2=1 \
+		-DROCKSDB_DISABLE_MARCH_NATIVE=1 \
 		-DDOWNLOAD_BOOST=1 \
 		-DWITH_SCALABILITY_METRICS=ON \
 		-DWITH_BOOST=libboost \
